[backend] implement logic for fetching results
